@@ -15,30 +15,43 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 /**
- * A utility class to find all classes annotated with {@code RegisterListener}
- * This class uses Google's reflections library to find said classes anywhere in the project
+ * A utility class to find all classes annotated with {@link RegisterListener}.
+ * This class uses Google's reflections library to find said classes anywhere in the project.
  */
 @UtilityClass
 public class RegisterListenerProcessor {
+    /**
+     * An instance of Reflections, used to visit all classes loaded by the class loader
+     */
     private final Reflections reflections = new Reflections(new ConfigurationBuilder()
             .setScanners(new SubTypesScanner(false), new ResourcesScanner(), new TypeAnnotationsScanner())
             .setUrls(ClasspathHelper.forJavaClassPath()));
 
-    public List<WhatsappListener> queryAllListeners(){
+    /**
+     * Queries all classes annotated with {@link RegisterListener} and initializes them using a no args constructor
+     *
+     * @return a list of {@link WhatsappListener}
+     */
+    public @NotNull List<WhatsappListener> queryAllListeners() {
         return reflections.getTypesAnnotatedWith(RegisterListener.class)
                 .stream()
+                .map(RegisterListenerProcessor::cast)
                 .map(RegisterListenerProcessor::newInstance)
                 .collect(Collectors.toUnmodifiableList());
     }
 
-    private WhatsappListener newInstance(@NotNull Class<?> clazz){
+    private @NotNull Class<? extends WhatsappListener> cast(@NotNull Class<?> clazz){
+        try{
+            return clazz.asSubclass(WhatsappListener.class);
+        }catch (ClassCastException ex){
+            throw new RuntimeException("WhatsappAPI: Cannot initialize class %s, classes annotated with @RegisterListener should implement WhatsappListener".formatted(clazz.getName()));
+        }
+    }
+
+    private @NotNull WhatsappListener newInstance(@NotNull Class<? extends WhatsappListener> clazz){
         try {
-            return (WhatsappListener) Arrays.stream(clazz.getConstructors())
-                    .filter(constructor -> constructor.getParameterCount() == 0)
-                    .findFirst()
-                    .orElseThrow(() -> new MissingConstructorException("WhatsappAPI: Cannot initialize listener %s, missing no args constructor", clazz.getName()))
-                    .newInstance();
-        }catch (IllegalAccessException | InstantiationException | InvocationTargetException e) {
+            return clazz.getDeclaredConstructor().newInstance();
+        }catch (IllegalAccessException | InstantiationException | InvocationTargetException | NoSuchMethodException e) {
             throw new RuntimeException("WhatsappAPI: Cannot initialize class %s%s".formatted(clazz.getName(), e.getMessage() == null ? "" : " with error %s".formatted(e.getMessage())));
         }
     }
